[package]
name = "bnpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
flate2 = { version = "1.0.25", features = ["zlib"] }
futures = "0.3.25"
reqwest = { version = "0.11.13", features = ["json", "blocking"] }
tar = "0.4.38"
tokio = { version = "1.24.1", features = ["full"] }
semver = { version = "1.0.17", features = ["serde"] }
